--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,104 @@
+html {
+  background: linear-gradient(90deg, rgba(216,255,249,1) 1%, rgba(135,194,245,1) 15%, rgba(141,189,237,1) 23%, rgba(167,210,206,1) 42%, rgba(76,171,230,1) 59%, rgba(108,189,255,1) 72%, rgba(68,166,219,1) 84%, rgba(156,212,221,1) 97%);;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Alegreya Sans', sans-serif;
+  font-family: 'Krub', sans-serif;
+}
+
+.main {
+  padding: 2rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+p {
+  font-size: 18px;
+}
+
+.banner {
+  background-image: url(./dominik-schroder-FIKD9t5_5zQ-unsplash.jpeg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 20px;
+  height: 17rem;
+  padding: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.banner h1 {
+  font-size: 36px;
+  font-weight: 300;
+}
+
+.banner p {
+  font-size: 76px;
+  font-weight: 300;
+}
+
+.weather-info-container {
+  display: flex;
+  justify-content: space-between
+}
+
+.parameters-container {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 1rem;
+  width: 15rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.parameters-container img {
+  width: 4rem;
+}
+
+.weather-info-container2 {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff; 
+  border-radius: 20px;
+  padding: 1rem;
+}
+
+.weather-info-container2 img {
+  width: 2rem;
+}
+
+.button {
+  width: 14rem;
+  text-decoration: none;
+  padding: 1rem;
+  background-color: rgb(244, 237, 93);
+  border-radius: 20px;
+  color: #000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: width 2s ease-in-out;
+}
+
+.button img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.button:hover {
+ width: 100%;
+}
+
+.banner img {
+  width: 20rem;
+  height: 20rem;
 }
